# kitten_logger

./: CMakeLists.txt  log_message.h  logger.h  trace.cpp  trace.h
kitten_logger/: easylogging++.h  logger.h
sources/: easylogging++.cpp  initializer.cpp
